fixed tapping on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -183,7 +183,12 @@
   }
   .sidebar-container {
     height: 55px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
     order: 3;
+    display: none;
+    visibility: hidden;
 
     /* height: 55px;
     order: 1; */
